update docker container to adoptopenjdk11 add https support for tls13

--- a/docker/pom.xml
+++ b/docker/pom.xml
@@ -25,7 +25,7 @@
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
-                <version>0.9.10</version>
+                <version>0.9.13</version>
                 <executions>
                     <execution>
                         <id>make-docker-image</id>
@@ -34,24 +34,23 @@
                             <goal>buildTar</goal>
                         </goals>
                         <configuration>
+                            <from>
+                                <image>adoptopenjdk/openjdk11</image>
+                            </from>
                             <to>
                                 <image>${dockerImageTag}</image>
                             </to>
                             <container>
-                                <jvmFlags>
-                                    <jvmFlag>-Xms1g</jvmFlag>
-                                    <jvmFlag>-Xmx1g</jvmFlag>
-                                </jvmFlags>
-                                <mainClass>password.pwm.onejar.OnejarMain</mainClass>
-                                <args>
+                                <entrypoint>
+                                    <arg>java</arg>
+                                    <arg>-jar</arg>
+                                    <arg>/app/libs/pwm-onejar-${project.version}.jar</arg>
                                     <arg>-applicationPath</arg>
                                     <arg>/config</arg>
-                                </args>
+                                </entrypoint>
                                 <format>docker</format>
                                 <ports>8443</ports>
                             </container>
-                            <!--<useCurrentTimestamp>true</useCurrentTimestamp>-->
-                            <allowInsecureRegistries>true</allowInsecureRegistries>
                         </configuration>
                     </execution>
                 </executions>
