--- a/rest-test-service/pom.xml
+++ b/rest-test-service/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>rest-test-service</artifactId>
     <packaging>war</packaging>
 
-    <name>PWM Password Self Service: REST Test Server</name>
+    <name>PWM Password Self Service: REST Test Server WAR</name>
 
     <properties>
         <project.root.basedir>${project.basedir}/..</project.root.basedir>
