locale util refactoring

--- a/server/src/main/resources/password/pwm/PwmConstants.properties
+++ b/server/src/main/resources/password/pwm/PwmConstants.properties
@@ -27,13 +27,13 @@
 locale.defaultLocale=en
 locale.defaultDateTimeFormat=yyyy-MM-dd'T'HH:mm:ss'Z'
 locale.defaultTimeZone=Zulu
+locale.highlightList=en,ca,da,de,es,fr,it,ja,nl,pl,pt_BR,ru,sv,zh_CN,zh_TW,en_CA,fr_CA,he
 httpHeaderAuthorizationBasic=Basic
 defaultBadPasswordAttempt=BADPASSWORDATTEMPT
 log.removedValue=*hidden*
 pwm.appName=PWM
 trial=false
 url.pwm-home=https://github.com/pwm-project/pwm
-url.pwm-cloud=https://pwm-cloud.appspot.com
 paramName.token=token
 defaultConfigFilename=PwmConfiguration.xml
 enableEulaDisplay=false
