--- a/server/src/main/resources/password/pwm/ldap/schema/SchemaDefinition.properties
+++ b/server/src/main/resources/password/pwm/ldap/schema/SchemaDefinition.properties
@@ -26,5 +26,6 @@ pwmLastPwdUpdate={schemaType:"attribute",name:"pwmLastPwdUpdate",definition:"( 1
 pwmGUID={schemaType:"attribute",name:"pwmGUID",definition:"( 1.3.6.1.4.1.35015.1.2.4 NAME 'pwmGUID' SYNTAX 1.3.6.1.4.1.1466.115.121.1.15 )"}
 pwmToken={schemaType:"attribute",name:"pwmToken",definition:"( 1.3.6.1.4.1.35015.1.2.5 NAME 'pwmToken' SYNTAX 1.3.6.1.4.1.1466.115.121.1.15 )"}
 pwmOtpSecret={schemaType:"attribute",name:"pwmOtpSecret",definition:"( 1.3.6.1.4.1.35015.1.2.6 NAME 'pwmOtpSecret' SYNTAX 1.3.6.1.4.1.1466.115.121.1.40 )"}
+pwmData={schemaType:"attribute",name:"pwmData",definition:"( 1.3.6.1.4.1.35015.1.2.7 NAME 'pwmData' SYNTAX 1.3.6.1.4.1.1466.115.121.1.40 )"}
 
-pwmUser={schemaType:"objectclass",name:"pwmUser",definition:"( 1.3.6.1.4.1.35015.1.1.1 NAME 'pwmUser' AUXILIARY MAY ( pwmLastPwdUpdate $ pwmEventLog $ pwmResponseSet $ pwmGUID $ pwmToken $ pwmOtpSecret ) )"}
+pwmUser={schemaType:"objectclass",name:"pwmUser",definition:"( 1.3.6.1.4.1.35015.1.1.1 NAME 'pwmUser' AUXILIARY MAY ( pwmLastPwdUpdate $ pwmEventLog $ pwmResponseSet $ pwmGUID $ pwmToken $ pwmOtpSecret $ pwmData ) )"}
