--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -38,6 +38,7 @@ audit.syslog.cef.header.severity=Unknown
 audit.syslog.cef.header.vendor=@PwmAppName@
 audit.syslog.message.length=900
 audit.syslog.message.truncateMsg=[truncated]
+auth.allowSSOwithUnknownPassword=true
 backup.path=backup
 backup.config.count=20
 backup.localdb.count=10
@@ -162,6 +163,7 @@ http.parameter.oauth.expires=expires_in
 http.parameter.oauth.responseType=response_type
 http.parameter.oauth.redirectUri=redirect_uri
 http.parameter.oauth.refreshToken=refresh_token
+http.parameter.oauth.scope=scope
 http.parameter.oauth.state=state
 http.parameter.oauth.grantType=grant_type
 http.download.buffer.size=102400
