--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@
 /webapp/src/main/webapp/public/resources/themes/netiq32
 /webapp/src/main/webapp/public/resources/themes/idm
 /webapp/src/main/webapp/public/resources/themes/mdefault
+/webapp/src/main/webapp/public/resources/themes/mdefault44
