Fixed a couple of UI bugs: * Text doesn't display properly when password policy description contains HTML * Settings buttons for list pages in People Search and Helpdesk aren't working

--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
         "@uirouter/angularjs": "1.0.15",
         "angular": "1.6.9",
         "angular-aria": "1.6.9",
+        "angular-sanitize": "1.6.9",
         "angular-translate": "2.17.0",
         "textangular": "1.5.16"
     },
