--- a/docker/pom.xml
+++ b/docker/pom.xml
@@ -34,7 +34,7 @@
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
-                <version>0.10.1</version>
+                <version>1.0.0</version>
                 <executions>
                     <execution>
                         <id>make-docker-image</id>
@@ -45,7 +45,7 @@
                         <configuration>
                             <skip>${skipDocker}</skip>
                             <from>
-                                <image>adoptopenjdk/openjdk11</image>
+                                <image>adoptopenjdk/openjdk11:slim</image>
                             </from>
                             <to>
                                 <image>${dockerImageTag}</image>
