--- a/server/src/main/resources/password/pwm/PwmConstants.properties
+++ b/server/src/main/resources/password/pwm/PwmConstants.properties
@@ -32,6 +32,7 @@ httpHeaderAuthorizationBasic=Basic
 defaultBadPasswordAttempt=BADPASSWORDATTEMPT
 log.removedValue=*hidden*
 pwm.appName=PWM
+pwm.vendorName=PWM
 trial=false
 url.pwm-home=https://github.com/pwm-project/pwm
 paramName.token=token
