updates to properties based config importer

--- a/server/src/main/resources/password/pwm/PwmConstants.properties
+++ b/server/src/main/resources/password/pwm/PwmConstants.properties
@@ -37,6 +37,7 @@ trial=false
 url.pwm-home=https://github.com/pwm-project/pwm
 paramName.token=token
 defaultConfigFilename=PwmConfiguration.xml
+defaultPropertiesConfigFilename=silent.properties
 enableEulaDisplay=false
 missingVersionString=[Version Missing]
 applicationPathInfoFile=applicationPath.properties
