oauth parsing enhancements

--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -159,6 +159,7 @@ http.parameter.ssoOverride=sso
 http.parameter.oauth.accessToken=access_token
 http.parameter.oauth.attributes=attributes
 http.parameter.oauth.clientID=client_id
+http.parameter.oauth.clientSecret=client_secret
 http.parameter.oauth.code=code
 http.parameter.oauth.expires=expires_in
 http.parameter.oauth.responseType=response_type
