--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -76,8 +76,8 @@ configEditor.blockOldIE=true
 configEditor.queryFilter.testLimit=5000
 configEditor.idleTimeoutSeconds=900
 configGuide.idleTimeoutSeconds=3600
-configManager.zipDebug.maxLogLines=100000
-configManager.zipDebug.maxLogSeconds=30
+configManager.zipDebug.maxLogBytes=50000000
+configManager.zipDebug.maxLogSeconds=120
 db.jdbcLoadStrategy=AppPathFileLoader,Classpath
 db.connections.max=5
 db.connections.timeoutMs=30000
@@ -98,6 +98,8 @@ healthCheck.nominalCheckIntervalSeconds=60
 healthCheck.minimumCheckIntervalSeconds=10
 healthCheck.maximumRecordAgeSeconds=300
 healthCheck.maximumForceCheckWaitSeconds=30
+health.supportBundle.file.writeIntervalSeconds=0
+health.supportBundle.file.writeRetentionCount=10
 health.certificate.warnSeconds=2592000
 health.ldap.cautionDurationMS=10800000
 health.ldap.proxy.pwExpireWarnSeconds=2592000
