--- a/docker/pom.xml
+++ b/docker/pom.xml
@@ -34,7 +34,7 @@
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
-                <version>1.1.0</version>
+                <version>1.1.2</version>
                 <executions>
                     <execution>
                         <id>make-docker-image</id>
@@ -44,8 +44,9 @@
                         </goals>
                         <configuration>
                             <skip>${skipDocker}</skip>
+                            <jib.console>plain</jib.console>
                             <from>
-                                <image>adoptopenjdk/openjdk11:slim</image>
+                                <image>adoptopenjdk/openjdk11:jre</image>
                             </from>
                             <to>
                                 <image>${dockerImageTag}</image>
