add /forgottenpassword rest api

--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -99,6 +99,7 @@
                 <configuration>
                     <archiveClasses>true</archiveClasses>
                     <packagingExcludes>**/*.jsp</packagingExcludes>
+                    <!-- remove/comment the next line to prevent pre-compiled JSPs from being used in the output WAR -->
                     <webXml>${project.build.directory}/web.xml</webXml>
                     <archive>
                         <manifestEntries>
