--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -327,6 +327,8 @@ token.resend.delayMS=3000
 token.verifyPwModifyTime=true
 token.removeOnClaim=true
 token.storage.maxKeyLength=100
+rest.server.forgottenPW.token.display=%LABEL%  %MESSAGE%  %VALUE%
+rest.server.forgottenPW.ruleDelimiter=<br/>
 urlshortener.url.regex=(https?://([^:@]+(:[^@]+)?@)?([a-zA-Z0-9.]+|d{1,3}.d{1,3}.d{1,3}.d{1,3}|[[0-9a-fA-F:]+])(:d{1,5})?/*[a-zA-Z0-9/\%_.]*?*[a-zA-Z0-9/\%_.=&#]*)
 wordlist.builtin.path=/WEB-INF/wordlist.zip
 wordlist.maxCharLength=64
