--- a/pwm-cr/pom.xml
+++ b/pwm-cr/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.pwm-project</groupId>
         <artifactId>pwm-parent</artifactId>
-        <version>1.9.0</version>
+        <version>2.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
