--- a/client/package.json
+++ b/client/package.json
@@ -45,7 +45,7 @@
         "imports-loader": "0.8.0",
         "jasmine": "3.2.0",
         "jasmine-core": "3.2.1",
-        "jshint": "2.9.5",
+        "jshint": "^2.10.2",
         "jshint-loader": "0.8.4",
         "json-loader": "0.5.7",
         "karma": "3.1.1",
@@ -58,7 +58,7 @@
         "karma-webpack": "3.0.5",
         "moment": "2.21.0",
         "ngtemplate-loader": "2.0.1",
-        "node-sass": "4.7.2",
+        "node-sass": "^4.12.0",
         "phantomjs": "2.1.7",
         "phantomjs-prebuilt": "2.1.16",
         "postcss-loader": "2.1.1",
