--- a/docker/pom.xml
+++ b/docker/pom.xml
@@ -34,7 +34,7 @@
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
-                <version>1.2.0</version>
+                <version>1.3.0</version>
                 <executions>
                     <execution>
                         <id>make-docker-image</id>
@@ -44,7 +44,6 @@
                         </goals>
                         <configuration>
                             <skip>${skipDocker}</skip>
-                            <jib.console>plain</jib.console>
                             <from>
                                 <image>adoptopenjdk/openjdk11:jre</image>
                             </from>
@@ -61,8 +60,10 @@
                                     <volume>/config</volume>
                                 </volumes>
                             </container>
-                            <extraDirectory>
-                                <path>${project.basedir}/src/main/image-files</path>
+                            <extraDirectories>
+                                <paths>
+                                    <path>${project.basedir}/src/main/image-files</path>
+                                </paths>
                                 <permissions>
                                     <permission>
                                         <file>/app/startup.sh</file>
@@ -73,7 +74,7 @@
                                         <mode>755</mode>
                                     </permission>
                                 </permissions>
-                            </extraDirectory>
+                            </extraDirectories>
                         </configuration>
                     </execution>
                 </executions>
