--- a/pom.xml
+++ b/pom.xml
@@ -172,12 +172,12 @@
                     <dependency>
                         <groupId>com.puppycrawl.tools</groupId>
                         <artifactId>checkstyle</artifactId>
-                        <version>8.21</version>
+                        <version>8.22</version>
                     </dependency>
                 </dependencies>
                 <executions>
                     <execution>
-                        <id>checkstyle</id>
+                        <id>checkstyle-base</id>
                         <phase>validate</phase>
                         <configuration>
                             <propertyExpansion>basedir=${project.root.basedir}</propertyExpansion>
@@ -191,6 +191,9 @@
                                 <directory>src/main</directory>
                                 <directory>src/test</directory>
                             </sourceDirectories>
+                            <cacheFile>${project.build.directory}/checkstyle/base/checkstyle-cachefile</cacheFile>
+                            <outputFile>${project.build.directory}/checkstyle/base/checkstyle-result.xml</outputFile>
+                            <rulesFiles>${project.build.directory}/checkstyle/base/checkstyle-rules.xml</rulesFiles>
                         </configuration>
                         <goals>
                             <goal>check</goal>
@@ -211,6 +214,9 @@
                                 <directory>src</directory>
                                 <directory>src/test</directory>
                             </sourceDirectories>
+                            <cacheFile>${project.build.directory}/checkstyle/header/checkstyle-cachefile</cacheFile>
+                            <outputFile>${project.build.directory}/checkstyle/header/checkstyle-result.xml</outputFile>
+                            <rulesFiles>${project.build.directory}/checkstyle/header/checkstyle-rules.xml</rulesFiles>
                         </configuration>
                         <goals>
                             <goal>check</goal>
@@ -232,6 +238,9 @@
                                 <directory>src/test</directory>
                                 <directory>src/main/webapp</directory>
                             </sourceDirectories>
+                            <cacheFile>${project.build.directory}/checkstyle/jsp/checkstyle-cachefile</cacheFile>
+                            <outputFile>${project.build.directory}/checkstyle/jsp/checkstyle-result.xml</outputFile>
+                            <rulesFiles>${project.build.directory}/checkstyle/jsp/checkstyle-rules.xml</rulesFiles>
                         </configuration>
                         <goals>
                             <goal>check</goal>
@@ -242,12 +251,12 @@
             <plugin>
                 <groupId>com.github.spotbugs</groupId>
                 <artifactId>spotbugs-maven-plugin</artifactId>
-                <version>3.1.11</version>
+                <version>3.1.12</version>
                 <dependencies>
                     <dependency>
                         <groupId>com.github.spotbugs</groupId>
                         <artifactId>spotbugs</artifactId>
-                        <version>4.0.0-beta2</version>
+                        <version>4.0.0-beta3</version>
                     </dependency>
                 </dependencies>
                 <configuration>
@@ -268,7 +277,7 @@
             <plugin> <!-- checks owsp vulnerability database -->
                 <groupId>org.owasp</groupId>
                 <artifactId>dependency-check-maven</artifactId>
-                <version>5.0.0-M3</version>
+                <version>5.0.0</version>
                 <executions>
                     <execution>
                         <goals>
@@ -291,7 +300,7 @@
         <dependency>
             <groupId>com.github.spotbugs</groupId>
             <artifactId>spotbugs-annotations</artifactId>
-            <version>4.0.0-beta2</version>
+            <version>4.0.0-beta3</version>
             <scope>provided</scope>
         </dependency>
 
