server-side http image reader

--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -125,6 +125,7 @@ http.client.alwaysLogEntities=false
 http.client.socketTimeoutMs=60000
 http.client.connectTimeoutMs=60000
 http.client.requestTimeoutMs=60000
+http.client.response.maxSize=20000000
 http.client.enableHostnameVerification=true
 http.client.promiscuous.wordlist.enable=true
 http.header.server=@PwmAppName@
@@ -266,6 +267,8 @@ peoplesearch.orgChart.maxParents=50
 peoplesearch.values.verifyUserDN=true
 peoplesearch.values.maxCount=100
 peoplesearch.view.detail.links=
+photo.clientCacheTimeSeconds=3600
+photo.internalHttpProxy.enable=true
 pwNotify.batch.count=100
 pwNotify.batch.delayTimeMultiplier=0.1
 pwNotify.maxLdapSearchSize=1000000
