--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -284,9 +284,9 @@ queue.syslog.maxCount=100000
 reporting.ldap.searchTimeoutMs=1800000
 reporting.ldap.searchThreads=8
 reporting.maxReportAgeSeconds=864000
-recaptcha.clientJsUrl=//recaptcha.net/recaptcha/api.js
-recaptcha.clientIframeUrl=//recaptcha.net/recaptcha/api/noscript
-recaptcha.validateUrl=https://recaptcha.net/recaptcha/api/siteverify
+recaptcha.clientJsUrl=//www.recaptcha.net/recaptcha/api.js
+recaptcha.clientIframeUrl=//www.recaptcha.net/recaptcha/api/noscript
+recaptcha.validateUrl=https://www.recaptcha.net/recaptcha/api/siteverify
 security.html.stripInlineJavascript=false
 security.http.forceRequestSequencing=false
 security.http.stripHeaderRegex=\\n|\\r|(?ism)%0A|%0D
