wordlist self tests and pre-hash support

--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -340,8 +340,11 @@ wordlist.minCharLength=2
 wordlist.import.autoImportRecheckSeconds=432000
 wordlist.import.durationGoalMS=1000
 wordlist.import.minTransactions=10
-wordlist.import.maxTransactions=200000
+wordlist.import.maxTransactions=100000
+wordlist.import.maxCharsTransactions=10485760
+wordlist.import.lineComments=!#comment:
 wordlist.inspector.frequencySeconds=300
+wordlist.testMode=false
 ws.restClient.pwRule.haltOnError=true
 ws.restServer.signing.form.timeoutSeconds=120
 ws.restServer.statistics.defaultHistoryDays=7
