wordlist disk space checking

--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -101,6 +101,7 @@ healthCheck.maximumForceCheckWaitSeconds=30
 health.supportBundle.file.writeIntervalSeconds=0
 health.supportBundle.file.writeRetentionCount=10
 health.certificate.warnSeconds=2592000
+health.disk.minFreeWarning=500000000
 health.ldap.cautionDurationMS=10800000
 health.ldap.proxy.pwExpireWarnSeconds=2592000
 health.java.maxThreads=1000
@@ -340,6 +341,7 @@ wordlist.minCharLength=2
 wordlist.import.autoImportRecheckSeconds=432000
 wordlist.import.durationGoalMS=1000
 wordlist.import.minTransactions=10
+wordlist.import.minFreeSpace=500000000
 wordlist.import.maxTransactions=100000
 wordlist.import.maxCharsTransactions=10485760
 wordlist.import.lineComments=!#comment:
