--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.root.basedir>${project.basedir}</project.root.basedir>
+        <maven.javadoc.skip>true</maven.javadoc.skip>
 
         <skipTests>false</skipTests>
     </properties>
@@ -58,9 +59,9 @@
             </properties>
         </profile>
         <profile>
-            <id>skip-javadoc</id>
+            <id>enable-javadoc</id>
             <properties>
-                <maven.javadoc.skip>true</maven.javadoc.skip>
+                <maven.javadoc.skip>false</maven.javadoc.skip>
             </properties>
         </profile>
     </profiles>
