angular dependency updates

--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
         "clean": "rimraf dist/",
         "test": "karma start test/karma.conf.js",
         "test-single-run": "karma start test/karma.conf.js --singleRun --no-auto-watch",
-        "start": "webpack-dev-server --mode=development --port 4000 --history-api-fallback --colors"
+        "start": "webpack-dev-server --mode=development --port 4000 --history-api-fallback --colors --progress"
     },
     "author": "",
     "license": "ISC",
@@ -25,11 +25,11 @@
         "angular-aria": "1.7.8",
         "angular-sanitize": "1.7.9",
         "angular-translate": "2.18.1",
-        "core-js": "3.2.1",
+        "core-js": "3.5.0",
         "textangular": "1.5.16"
     },
     "devDependencies": {
-        "@types/angular": "1.6.43",
+        "@types/angular": "^1.6.57",
         "@types/angular-mocks": "1.5.11",
         "@types/angular-translate": "2.15.2",
         "@types/angular-ui-router": "1.1.40",
@@ -37,8 +37,8 @@
         "@types/node": "9.4.7",
         "angular-mocks": "1.6.9",
         "autoprefixer": "8.1.0",
-        "copy-webpack-plugin": "4.5.1",
-        "css-loader": "^3.2.1",
+        "copy-webpack-plugin": "^5.1.1",
+        "css-loader": "^3.3.2",
         "file-loader": "1.1.11",
         "html-loader": "0.5.5",
         "html-webpack-plugin": "3.0.6",
@@ -59,7 +59,7 @@
         "karma-webpack": "3.0.5",
         "moment": "2.21.0",
         "ngtemplate-loader": "2.0.1",
-        "node-sass": "^4.13.0",
+        "node-sass": "4.13.0",
         "phantomjs": "2.1.7",
         "phantomjs-prebuilt": "2.1.16",
         "postcss-loader": "2.1.1",
@@ -75,7 +75,7 @@
         "typescript": "2.7.2",
         "uglifyjs-webpack-plugin": "1.2.3",
         "url-loader": "1.0.1",
-        "webpack": "4.1.1",
+        "webpack": "^4.41.2",
         "webpack-cli": "^3.3.10",
         "webpack-dev-server": "3.1.14",
         "webpack-merge": "4.1.2",
