ldap connection and session management improvements

--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -104,6 +104,8 @@ health.certificate.warnSeconds=2592000
 health.disk.minFreeWarning=500000000
 health.ldap.cautionDurationMS=10800000
 health.ldap.proxy.pwExpireWarnSeconds=2592000
+health.ldap.userSearch.warnMS=500
+health.ldap.userSearch.searchTerm=@RandomChar:10@-healthcheck
 health.java.maxThreads=1000
 health.java.minHeapBytes=67108864
 helpdesk.token.maxAgeSeconds=300
@@ -193,6 +195,7 @@ ldap.chaiSettings=
 ldap.proxy.connectionsPerProfile=10
 ldap.proxy.maxConnections=50
 ldap.proxy.useThreadLocal=true
+ldap.proxy.idleThreadLocal.timeoutMS=90000
 ldap.extensions.nmas.enable=true
 ldap.connection.timeoutMS=30000
 ldap.profile.retryDelayMS=30000
