--- a/docker/pom.xml
+++ b/docker/pom.xml
@@ -34,7 +34,7 @@
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
-                <version>1.8.0</version>
+                <version>2.0.0</version>
                 <executions>
                     <execution>
                         <id>make-docker-image</id>
@@ -50,11 +50,13 @@
                             <to>
                                 <image>${dockerImageTag}</image>
                             </to>
+                            <outputPaths>
+                                <tar>target/pwm-docker-image-${project.version}.tar</tar>
+                            </outputPaths>
                             <container>
                                 <entrypoint>
                                     <arg>/app/startup.sh</arg>
                                 </entrypoint>
-                                <format>docker</format>
                                 <ports>
                                     <port>8443</port>
                                 </ports>
